Sintatico/analiseSintANTLR/gen/gramaticacmenosParser.java
// Generated from /home/heuller/Documents/2019-1/Compiladores/analiseSintANTLR/src/gramaticacmenos.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class gramaticacmenosParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, T__55=56, T__56=57, T__57=58, T__58=59, 
		T__59=60, T__60=61, T__61=62, T__62=63, T__63=64, T__64=65, WS=66;
	public static final int
		RULE_programa = 0, RULE_declaracao_lista = 1, RULE_declaracao = 2, RULE_var_declaracao = 3, 
		RULE_tipo_especificador = 4, RULE_atributos_declaracao = 5, RULE_fun_declaracao = 6, 
		RULE_params = 7, RULE_param_lista = 8, RULE_param = 9, RULE_composto_decl = 10, 
		RULE_local_declaracoes = 11, RULE_comando_lista = 12, RULE_comando = 13, 
		RULE_expressao_decl = 14, RULE_selecao_decl = 15, RULE_iteracao_decl = 16, 
		RULE_retorno_decl = 17, RULE_expressao = 18, RULE_var = 19, RULE_expressao_simples = 20, 
		RULE_relacional = 21, RULE_expressao_soma = 22, RULE_soma = 23, RULE_termo = 24, 
		RULE_mult = 25, RULE_fator = 26, RULE_ativacao = 27, RULE_args = 28, RULE_arg_lista = 29, 
		RULE_num = 30, RULE_num_int = 31, RULE_digito = 32, RULE_ident = 33, RULE_letra = 34, 
		RULE_abre_chave = 35, RULE_fecha_chave = 36, RULE_abre_colchete = 37, 
		RULE_fecha_colchete = 38;
	private static String[] makeRuleNames() {
		return new String[] {
			"programa", "declaracao_lista", "declaracao", "var_declaracao", "tipo_especificador", 
			"atributos_declaracao", "fun_declaracao", "params", "param_lista", "param", 
			"composto_decl", "local_declaracoes", "comando_lista", "comando", "expressao_decl", 
			"selecao_decl", "iteracao_decl", "retorno_decl", "expressao", "var", 
			"expressao_simples", "relacional", "expressao_soma", "soma", "termo", 
			"mult", "fator", "ativacao", "args", "arg_lista", "num", "num_int", "digito", 
			"ident", "letra", "abre_chave", "fecha_chave", "abre_colchete", "fecha_colchete"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "'int'", "'float'", "'char'", "'void'", "'struct'", "'('", 
			"')'", "','", "'if'", "'else'", "'while'", "'return'", "'='", "'<='", 
			"'<'", "'>'", "'>='", "'=='", "'!='", "'+'", "'-'", "'*'", "'/'", "'.'", 
			"'0'", "'1'", "'2'", "'3'", "'4'", "'5'", "'6'", "'7'", "'8'", "'9'", 
			"'a'", "'b'", "'c'", "'d'", "'e'", "'f'", "'g'", "'h'", "'i'", "'j'", 
			"'k'", "'l'", "'m'", "'n'", "'o'", "'p'", "'q'", "'r'", "'s'", "'t'", 
			"'u'", "'v'", "'w'", "'x'", "'y'", "'z'", "'{'", "'}'", "'['", "']'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "gramaticacmenos.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gramaticacmenosParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramaContext extends ParserRuleContext {
		public Declaracao_listaContext declaracao_lista() {
			return getRuleContext(Declaracao_listaContext.class,0);
		}
		public ProgramaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_programa; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterPrograma(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitPrograma(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitPrograma(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramaContext programa() throws RecognitionException {
		ProgramaContext _localctx = new ProgramaContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_programa);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			declaracao_lista();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Declaracao_listaContext extends ParserRuleContext {
		public List<DeclaracaoContext> declaracao() {
			return getRuleContexts(DeclaracaoContext.class);
		}
		public DeclaracaoContext declaracao(int i) {
			return getRuleContext(DeclaracaoContext.class,i);
		}
		public Declaracao_listaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao_lista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterDeclaracao_lista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitDeclaracao_lista(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitDeclaracao_lista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Declaracao_listaContext declaracao_lista() throws RecognitionException {
		Declaracao_listaContext _localctx = new Declaracao_listaContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_declaracao_lista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(81); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(80);
				declaracao();
				}
				}
				setState(83); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DeclaracaoContext extends ParserRuleContext {
		public Var_declaracaoContext var_declaracao() {
			return getRuleContext(Var_declaracaoContext.class,0);
		}
		public Fun_declaracaoContext fun_declaracao() {
			return getRuleContext(Fun_declaracaoContext.class,0);
		}
		public DeclaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterDeclaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitDeclaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitDeclaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DeclaracaoContext declaracao() throws RecognitionException {
		DeclaracaoContext _localctx = new DeclaracaoContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaracao);
		try {
			setState(87);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(85);
				var_declaracao();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(86);
				fun_declaracao();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Var_declaracaoContext extends ParserRuleContext {
		public Tipo_especificadorContext tipo_especificador() {
			return getRuleContext(Tipo_especificadorContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public List<Abre_colcheteContext> abre_colchete() {
			return getRuleContexts(Abre_colcheteContext.class);
		}
		public Abre_colcheteContext abre_colchete(int i) {
			return getRuleContext(Abre_colcheteContext.class,i);
		}
		public List<Num_intContext> num_int() {
			return getRuleContexts(Num_intContext.class);
		}
		public Num_intContext num_int(int i) {
			return getRuleContext(Num_intContext.class,i);
		}
		public List<Fecha_colcheteContext> fecha_colchete() {
			return getRuleContexts(Fecha_colcheteContext.class);
		}
		public Fecha_colcheteContext fecha_colchete(int i) {
			return getRuleContext(Fecha_colcheteContext.class,i);
		}
		public Var_declaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_var_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterVar_declaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitVar_declaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitVar_declaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Var_declaracaoContext var_declaracao() throws RecognitionException {
		Var_declaracaoContext _localctx = new Var_declaracaoContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_var_declaracao);
		int _la;
		try {
			setState(107);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(89);
				tipo_especificador();
				setState(90);
				ident();
				setState(91);
				match(T__0);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(93);
				tipo_especificador();
				setState(94);
				ident();
				setState(95);
				abre_colchete();
				setState(96);
				num_int();
				setState(97);
				fecha_colchete();
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__63) {
					{
					{
					setState(98);
					abre_colchete();
					setState(99);
					num_int();
					setState(100);
					fecha_colchete();
					}
					}
					setState(106);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Tipo_especificadorContext extends ParserRuleContext {
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Abre_chaveContext abre_chave() {
			return getRuleContext(Abre_chaveContext.class,0);
		}
		public Atributos_declaracaoContext atributos_declaracao() {
			return getRuleContext(Atributos_declaracaoContext.class,0);
		}
		public Fecha_chaveContext fecha_chave() {
			return getRuleContext(Fecha_chaveContext.class,0);
		}
		public Tipo_especificadorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_tipo_especificador; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterTipo_especificador(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitTipo_especificador(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitTipo_especificador(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Tipo_especificadorContext tipo_especificador() throws RecognitionException {
		Tipo_especificadorContext _localctx = new Tipo_especificadorContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_tipo_especificador);
		try {
			setState(119);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__1:
				enterOuterAlt(_localctx, 1);
				{
				setState(109);
				match(T__1);
				}
				break;
			case T__2:
				enterOuterAlt(_localctx, 2);
				{
				setState(110);
				match(T__2);
				}
				break;
			case T__3:
				enterOuterAlt(_localctx, 3);
				{
				setState(111);
				match(T__3);
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 4);
				{
				setState(112);
				match(T__4);
				}
				break;
			case T__5:
				enterOuterAlt(_localctx, 5);
				{
				setState(113);
				match(T__5);
				setState(114);
				ident();
				setState(115);
				abre_chave();
				setState(116);
				atributos_declaracao();
				setState(117);
				fecha_chave();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Atributos_declaracaoContext extends ParserRuleContext {
		public List<Var_declaracaoContext> var_declaracao() {
			return getRuleContexts(Var_declaracaoContext.class);
		}
		public Var_declaracaoContext var_declaracao(int i) {
			return getRuleContext(Var_declaracaoContext.class,i);
		}
		public Atributos_declaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributos_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterAtributos_declaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitAtributos_declaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitAtributos_declaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Atributos_declaracaoContext atributos_declaracao() throws RecognitionException {
		Atributos_declaracaoContext _localctx = new Atributos_declaracaoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atributos_declaracao);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(121);
			var_declaracao();
			setState(125);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) {
				{
				{
				setState(122);
				var_declaracao();
				}
				}
				setState(127);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fun_declaracaoContext extends ParserRuleContext {
		public Tipo_especificadorContext tipo_especificador() {
			return getRuleContext(Tipo_especificadorContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public Composto_declContext composto_decl() {
			return getRuleContext(Composto_declContext.class,0);
		}
		public Fun_declaracaoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fun_declaracao; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterFun_declaracao(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitFun_declaracao(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitFun_declaracao(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fun_declaracaoContext fun_declaracao() throws RecognitionException {
		Fun_declaracaoContext _localctx = new Fun_declaracaoContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fun_declaracao);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			tipo_especificador();
			setState(129);
			ident();
			setState(130);
			match(T__6);
			setState(131);
			params();
			setState(132);
			match(T__7);
			setState(133);
			composto_decl();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamsContext extends ParserRuleContext {
		public Param_listaContext param_lista() {
			return getRuleContext(Param_listaContext.class,0);
		}
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamsContext params() throws RecognitionException {
		ParamsContext _localctx = new ParamsContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_params);
		try {
			setState(137);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(135);
				param_lista();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(136);
				match(T__4);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Param_listaContext extends ParserRuleContext {
		public List<ParamContext> param() {
			return getRuleContexts(ParamContext.class);
		}
		public ParamContext param(int i) {
			return getRuleContext(ParamContext.class,i);
		}
		public Param_listaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param_lista; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterParam_lista(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitParam_lista(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitParam_lista(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Param_listaContext param_lista() throws RecognitionException {
		Param_listaContext _localctx = new Param_listaContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_param_lista);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(139);
			param();
			setState(144);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__8) {
				{
				{
				setState(140);
				match(T__8);
				setState(141);
				param();
				}
				}
				setState(146);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParamContext extends ParserRuleContext {
		public Tipo_especificadorContext tipo_especificador() {
			return getRuleContext(Tipo_especificadorContext.class,0);
		}
		public IdentContext ident() {
			return getRuleContext(IdentContext.class,0);
		}
		public Abre_colcheteContext abre_colchete() {
			return getRuleContext(Abre_colcheteContext.class,0);
		}
		public Fecha_colcheteContext fecha_colchete() {
			return getRuleContext(Fecha_colcheteContext.class,0);
		}
		public ParamContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_param; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterParam(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitParam(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitParam(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParamContext param() throws RecognitionException {
		ParamContext _localctx = new ParamContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_param);
		try {
			setState(155);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(147);
				tipo_especificador();
				setState(148);
				ident();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(150);
				tipo_especificador();
				setState(151);
				ident();
				setState(152);
				abre_colchete();
				setState(153);
				fecha_colchete();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Composto_declContext extends ParserRuleContext {
		public Abre_chaveContext abre_chave() {
			return getRuleContext(Abre_chaveContext.class,0);
		}
		public Local_declaracoesContext local_declaracoes() {
			return getRuleContext(Local_declaracoesContext.class,0);
		}
		public Comando_listaContext comando_lista() {
			return getRuleContext(Comando_listaContext.class,0);
		}
		public Fecha_chaveContext fecha_chave() {
			return getRuleContext(Fecha_chaveContext.class,0);
		}
		public Composto_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_composto_decl; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterComposto_decl(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitComposto_decl(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitComposto_decl(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Composto_declContext composto_decl() throws RecognitionException {
		Composto_declContext _localctx = new Composto_declContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_composto_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(157);
			abre_chave();
			setState(158);
			local_declaracoes();
			setState(159);
			comando_lista();
			setState(160);
			fecha_chave();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Local_declaracoesContext extends ParserRuleContext {
		public List<Var_declaracaoContext> var_declaracao() {
			return getRuleContexts(Var_declaracaoContext.class);
		}
		public Var_declaracaoContext var_declaracao(int i) {
			return getRuleContext(Var_declaracaoContext.class,i);
		}
		public Local_declaracoesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_local_declaracoes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).enterLocal_declaracoes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gramaticacmenosListener ) ((gramaticacmenosListener)listener).exitLocal_declaracoes(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof gramaticacmenosVisitor ) return ((gramaticacmenosVisitor<? extends T>)visitor).visitLocal_declaracoes(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Local_declaracoesContext local_declaracoes() throws RecognitionException {
		Local_declaracoesContext _localctx = new Local_declaracoesContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_local_declaracoes);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(165);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__5))) != 0)) {
				{
				{
				setState(162);
				var_declaracao();
				}
				}
				setState(167);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
